--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	--primary-color: white;
 	--dark-color: #2F313A;
 	--light-color: #ecc500;
+	--margin-color: #D9D9D9;
 }
 
 * {
@@ -12,15 +13,116 @@
 }
 
 body {
-    padding: 2rem;
+	position: relative;
 	font-family: Arial, Helvetica, sans-serif;
 	-webkit-font-smoothing: antialiased;
 	background: var(--dark-color);
     color: var(--primary-color);
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	height: 100px;
+	border-bottom: 1px solid var(--margin-color);
+
 }
 
 h1 {
     color: var(--primary-color);
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 700;
+}
+
+h2 {
+	color: var(--primary-color);
+    font-size: 1rem;
+    font-weight: 700;
+	text-transform: uppercase;
+}
+
+h3 {
+	color: var(--light-color);
+    font-size: 0.8rem;
+    font-weight: 700;
+	text-transform: uppercase;
+}
+
+p {
+	color: var(--primary-color);
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+a {
+	text-decoration: underline;
+	color: var(--primary-color);
+	font-size: 1rem;
+    font-weight: 700;
+}
+
+/* nav */
+nav {
+	display: flex;
+	width: 100%;
+	height: 100px;
+	padding: 0 100px;
+	align-items: center;
+	max-width: 1440px;
+	margin-left: auto;
+    margin-right:auto;
+	
+}
+
+.nav-container {
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+}
+
+.logo img{
+	height: 32px;
+}
+
+.nav {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+}
+
+/* button */
+.main-btn {
+	background: var(--light-color);
+	color: var(--dark-color);
+	text-decoration: none;
+	padding: 1rem 2rem;
+	border-radius: 8px;
+	text-transform: uppercase;
+}
+
+.main-btn:hover {
+	opacity: 0.9;
+}
+
+.nav a:hover {
+	opacity: 0.8;
+}
+
+/* hero */
+.hero {
+	padding-top: 100px;
+	display: flex;
+	padding: 100px;
+	gap: 50px;
+	border-bottom: 1px solid var(--margin-color);
+}
+
+.column {
+	display: flex;
+	flex-direction: column;
+	padding: 150px 0;
+	gap: 20px;
+	width: 50%;
+}
+
+.column a {
+	width: 175px;
 }
