--- a/style.css
+++ b/style.css
@@ -202,6 +202,22 @@ video {
 	border-radius: 1rem;
 }
 
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	height: 0;
+	overflow: hidden;
+	border-radius: 1rem;
+}
+
+.video-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}  
+
 /* main */
 .main {
 	display: block;
@@ -354,6 +370,10 @@ footer img {
 		text-align: center;
 		align-items: center;
 	}
+
+	.video-container {
+		width: 100%;
+	}
 }
 
 @media screen and (max-width: 980px) {
@@ -400,6 +420,11 @@ footer img {
 }
 
 @media screen and (max-width: 550px) {
+
+	.nav-container {
+		padding: 0;
+	}
+
 	h1 {
 		font-size: 2rem;
 	}
